Fix refund tests